--- a/client_side/src/app/car-list/car-list.component.html
+++ b/client_side/src/app/car-list/car-list.component.html
@@ -38,7 +38,7 @@
       <p class="text-center"><strong>{{i.CarType.Model}}</strong></p>
       <br>
       <a href="#demo{{j}}" data-toggle="collapse">
-        <img src="http://localhost:54743/CarsImges/{{i.CarImg}}" class="img-circle person" alt="Random Name">
+        <img src="{{ImgServerLink}}/{{i.CarImg}}" class="img-circle person" alt="Random Name">
         <div id="demo{{j}}" class="collapse">
           <h2 class="carinfo">{{i.CarType.Year}}</h2>
           <h2 class="carinfo">{{i.CarlicenseNumber}}</h2>
